:memo:Update: Refactoring new updated readme for week 2

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -17,8 +17,96 @@
 
 <h1>Diary</h1>
 
+**TODO: Copy for each day applicable..**
+
+<h2 align="center">06/02</h2>
+
+<!-- Learning Angular -->
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |    Learning Angular      |
+| Objective    |   Understanding file and folder structure of Angular       |
+| Blockers?    |   Confusion of how file are laid       |
+
+<!-- ### Task progresss board -->
+### Achievement
+
+- By the help of [Travesy Media](https://www.youtube.com/watch?v=3dHNOWTI7H8&t=3036s) got a gist of Angular
+<!-- List all the tasks and bounties in progress this week -->
+<!-- 
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 02/02/23 	| 🏇 Responsive Header | Closed | [#1](https://github.com/italanta/elewa-group/issues/01) |
+| 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/10) |  -->
+
+<h2 align="center">07/02</h2>
+
+<!-- Working on Task Tracker App -->
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |    Building a Task Tracker App      |
+| Objective    |   Understanding more module in Angular       |
+| Blockers?    |   Import issues     |
+
+<!-- ### Task progresss board -->
+
+<!-- List all the tasks and bounties in progress this week -->
+
+<!-- | Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 02/02/23 	| 🏇 Responsive Header | Closed | [#1](https://github.com/italanta/elewa-group/issues/01) |
+| 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/10) | -->
+### Achievement
+
+- By the help of [Travesy Media](https://www.youtube.com/watch?v=3dHNOWTI7H8&t=3036s) coded along.
+
+<h2 align="center">08/02</h2>
+
+<!-- Reading out the Angular Documentation -->
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |   Starting on Tours of Heroes      |
+| Objective    |   Growth in Angular       |
+| Blockers?    |   Redoing in order to get an understanding       |
+
+<!-- ### Task progresss board -->
+
+<!-- List all the tasks and bounties in progress this week -->
+
+<!-- | Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 02/02/23 	| 🏇 Responsive Header | Closed | [#1](https://github.com/italanta/elewa-group/issues/01) |
+| 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/10) | -->
+### Achievement
+- My understanding and passion for Angular keeps growing
+
 <h2 align="center">09/02</h2>
 
+<!-- Worked on issue [10](https://github.com/italanta/elewa-group/issues/10) -->
 ### Overview of the day
 
 <!-- Fill out the daily scrum table 
@@ -42,28 +130,31 @@
 | 02/02/23 	| 🏇 Responsive Header | Closed | [#1](https://github.com/italanta/elewa-group/issues/01) |
 | 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/10) |
 
-**TODO: Copy for each day applicable..**
-
-<h2 align="center">06/02</h2>
-
-Learning Angular
-
-<h2 align="center">07/02</h2>
-
-Working on Task Tracker App
-
-<h2 align="center">08/02</h2>
-
-Reading out the Angular Documentation
-
-<h2 align="center">09/02</h2>
-
-Worked on issue [10](https://github.com/italanta/elewa-group/issues/10)
-
 <h2 align="center">10/02</h2>
 
-Creating a Pull Request
+<!-- Creating a Pull Request -->
+### Overview of the day
 
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |    Working on another issue      |
+| Objective    |   Grow my understanding in Angular       |
+| Blockers?    |   Still having things not working out successfully       |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 02/02/23 	| 🏇 Responsive Header | Closed | [#1](https://github.com/italanta/elewa-group/issues/01) |
+| 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/10) |
 
 <br/>
 
