📝 doc: updated portfolio

--- a/progress/w04_20_02.md
+++ b/progress/w04_20_02.md
@@ -4,7 +4,7 @@
   In this agenda, you will note down day to day progress.
 -->
 
-<h1 align="center">Week 01 - 01/30/2023</h1>
+<h1 align="center">Week 04 - 04/20/2023</h1>
 
 <p align="center"><a href="#summary">Summary of this week</a></p>
 
@@ -16,48 +16,25 @@
 
 <h1>Diary</h1>
 
-<h2 align="center">30/01</h2>
+<h2 align="center">20/02</h2>
 
-*No activity*
+*Going Through ELEWA-CLM Code*
 
-<h2 align="center">31/01</h2>
+<h2 align="center">21/02</h2>
 
-*No activity*
+*Going Through ELEWA-CLM Code*
 
-<h2 align="center">01/02</h2>
+<h2 align="center">22/02</h2>
 
-*No activity*
+*Going Through ELEWA-CLM Code*
 
-<h2 align="center">02/02</h2>
+<h2 align="center">23/02</h2>
 
-### Overview of the day
+*No Activity*
 
-<!-- Fill out the daily scrum table 
-  -- Doing today? - What are you working on today?
-  -- Objective?   - What do you hope to achieve today?
-  -- Blockers?    - Any blockers? Anywhere you need help?
--->
+<h2 align="center">24/02</h2>
 
-| Scrum	 | Answers 	| 
-|----------	|-------	|
-| Doing today? | I am attending the iTalanta/Moringa Kickoff |
-| Objective | To create my portfolio and to launch the application |
-| Blockers? | No challenges |
-
-
-### Task progresss board
-
-<!-- List all the tasks and bounties in progress this week -->
-
-| Worked on 	| Status 	| Link 	|
-|----------	|-------	|--------	|
-| Choose a project | *Chosen* | [Elewa-group](https://github.com/italanta/elewa-group/) |
-| Run the project | Project is *running but not live* | |
-| Pick a teammate | Teammate *picked* |[Adams](https://github.com/adamswonder/elewa-group) |
-
-
-<h2 align="center">03/02</h2>
-
+*Going Through ELEWA-CLM Code*
 
 ### Overview of the day
 
@@ -101,12 +78,10 @@
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [x] Take part in the project kick off
 - [x] Develop my portfolio page
-- [x] Register myself onto the workroom
-- [x] Install *< Elewa & Kujali >* on my local device
-- [ ] Connect *< Elewa & Kujali >* to my local emulators and run the project
-- [ ] Connect *< Elewa & Kujali >* to firebase
+- [x] Install *< Elewa CLM >* on my local device
+- [x] Connect *< Elewa CLM >* to my local emulators and run the project
+- [x] Connect *< Elewa CLM >* to firebase
 
 ### My week
 <!-- Keep track of your time table daily -->
@@ -114,9 +89,9 @@
 
 |                | Mo | Tu 	| We 	| Th    | Fr | Sa |
 |---             |---	|---	|---  |---    |--- |--- |
-| **Start time** |    |     |     | 08:00 | 08:00 |    |
-| **End time**	 |    |     |     | 17:00 | 17:00 |    |
-| **Hours**	     | 0  | 0   | 0   | 8     | 0  | 0  |
+| **Start time** |  08:00  |  08:00   |  08:00   | 08:00 | --- |  08:00  |
+| **End time**	 |  17:00  |   17:00  |   17:00  | 17:00 | --- |  17:00  |
+| **Hours**	     | 8  | 8   | 8   | 8     | ---  | 8  |
 
 ### My lessons
 <!-- What did I learn? -->
