📝 doc: updated portfolio week 04

--- a/progress/w04_20_02.md
+++ b/progress/w04_20_02.md
@@ -97,23 +97,19 @@
 <!-- What did I learn? -->
 <u>Everything I learned</u>
 
-- Basics of Angular
+- Complex Angular functionalities
 - Running an Angular project
 - Firebase
-- Serverless programming
 
-<u>The key lesson(s) of this week:</u>
-
-Observables are timelines. Values which change over time. Using Rxjs, a system can be developed to react to these timelines, hence the name "reactive programming."
 
 ### How I am doing
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was reflective because I am starting a new journey that will require my focus.
+- My mood this week was reflective because I am starting a new project that will require my focus.
   
-- Compared to last week, I feel more contemplative because I learning a new Javascript framework
+- Compared to last week, I feel more jubilant because I am working on a humanitarian project
 
-- I find the project to be friendly
+- I find the project to be deliberately constructive
 
-- My level of stress is relaxed
+- My level of stress is slightly high
