--- a/progress/wk4_2023.md
+++ b/progress/wk4_2023.md
@@ -6,7 +6,7 @@
   In this agenda, you will note down day to day progress.
 -->
 
-<h1 align="center">Week 04 - 20/02/2023</h1>
+<h1 align="center">Week 04 - 20/02/2023 to 24/02/23</h1>
 
 <p align="center"><a href="#summary">Summary of this week</a></p>
 
@@ -19,7 +19,7 @@
 
 <h1>Diary</h1>
 
-<h2 align="center">Monday,20/02/23 - Friday, 24/02/23</h2>
+<h2 align="center">Monday,20/02/23 </h2>
 
 ### Overview of the day
 
