--- a/progress/wk5_2023.md
+++ b/progress/wk5_2023.md
@@ -83,7 +83,7 @@
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
 | Doing today? |  Revision on angular, learning event hooks         |
-| Objective    |   Cover docs on angular that deal with with events  |
+| Objective    |   Cover docs on angular that deal with events  |
 | Blockers?    |         |
 
 
