--- a/progress/w03_13_02.md
+++ b/progress/w03_13_02.md
@@ -6,7 +6,7 @@
   In this agenda, you will note down day to day progress.
 -->
 
-<h1 align="center">Week 03 - 13/02/2023</h1>
+<h1 align="center">Week 03 - 16/02/2023</h1>
 
 <p align="center"><a href="#summary">Summary of this week</a></p>
 
@@ -19,21 +19,15 @@
 
 <h1>Diary</h1>
 
-<h2 align="center">13/02</h2>
+<h2 align="center">16/02/2023</h2>
 
 ### Overview of the day
 
-<!-- Fill out the daily scrum table 
-  -- Doing today? - What are you working on today?
-  -- Objective?   - What do you hope to achieve today?
-  -- Blockers?    - Any blockers? Anywhere you need help?
--->
-
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? |    Working on another issue      |
+| Objective    |    Getting better in Angular     |
+| Blockers?    |    Still having things not working out successfully    |
 
 ### Task progresss board
 
@@ -41,26 +35,50 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
+| 17/01/23 	|  |  |  |
+| 12/01/23	|  |  |  |
 
 **TODO: Copy for each day applicable..**
 
 <h2 align="center">14/02</h2>
 
-*No activity*
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |    Working on another issue      |
+| Objective    |    Getting better in Angular     |
+| Blockers?    |    Still having things not working out successfully    |
 
 <h2 align="center">15/02</h2>
 
-*No activity*
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |    Working on another issue      |
+| Objective    |    Getting better in Angular     |
+| Blockers?    |    Still having things not working out successfully    |
 
 <h2 align="center">16/02</h2>
 
-*No activity*
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |    Working on another issue      |
+| Objective    |    Getting better in Angular     |
+| Blockers?    |    Still having things not working out successfully    |
 
 <h2 align="center">17/02</h2>
 
-*No activity*
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |    Working on another issue      |
+| Objective    |    Getting better in Angular     |
+| Blockers?    |    Still having things not working out successfully    |
 
 
 <br/>
@@ -81,7 +99,7 @@
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [ ] 
+- [ ] Finish on the Tours of Heroes project
 
 
 ### My week
@@ -109,10 +127,10 @@ TODO
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week washappy and encouraged because things started working out
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more excited because all is getting better
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to be challenging 
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is manageable
