📝 doc: updated portfolio

--- a/progress/w06_06_03.md
+++ b/progress/w06_06_03.md
@@ -141,6 +141,30 @@
 |----------	|-------	|--------	|------	|
 | 10/03/23 	| 🏇 [App Design: Sign up Page](https://github.com/italanta/elewa/issues/130) | Working on It | [---]() |
 
+<h2 align="center">11/03</h2>
+
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Styling section|
+| Objective    | Design the section according to the provided design|
+| Blockers?    | None |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 11/03/23 	| 🏇 [App Design: Sign up Page](https://github.com/italanta/elewa/issues/130) | Working on It | [---]() |
+
 <br/>
 
 <hr id="summary" />
